--- a/Goja_Fransisko.mw
+++ b/Goja_Fransisko.mw
@@ -3,9 +3,34 @@
 | изображение = Goya Self portrait with spectacles (Musee Goya Castres).jpg
 | описание изображения = Fransisko Goja (1797−1800, avtoportret)
 }}
-'''Fransisko Goja''', täuz' nimi om '''Fransisko Hose de Goja i Lusjentes''' ({{lang-es|Francisco José de Goya y Lucientes}}; sünd. 30. keväz'ku 1746, [[Fuendetodos]] läz [[Saragos]]ad, [[Ispanii]] — kol. 16. sulaku 1828, [[Bordo]], [[Francii]]) oli [[Ispanii|ispanijalalaine]] voimujupirdai, [[romantizm|romantižen]] voimujupirdandan luja ezitai.
+'''Fransisko Goja''', täuz' nimi om '''Fransisko Hose de Goja i Lusjentes''' ({{lang-es|Francisco José de Goya y Lucientes}}; sünd. 30. keväz'ku 1746, [[Fuendetodos]] läz [[Saragos]]ad, [[Ispanii]] — kol. 16. sulaku 1828, [[Bordo]], [[Francii]]) oli [[Ispanii|ispanine]] voimujupirdai da gravirui, [[romantizm|romantižen]] voimujupirdandan luja ezitai.
 
-Goja oli ispanižen monarhijan tanhalaine voimujupirdai. [[Pol'sar'soda]]n aigan hän jäi [[Madrid]]ha, kus sädi [[Bonapart Žozef|Bonapartan Žozefan]] modkuvan. Sil aigal hän mugažo dokumentirui sodad ičeze grafižes ''[[Desastres de la Guerra]]''-serijas.
+Goja oli sündnu keskmäižen klassan kanzha, radoi ispanižen monarhijan tanhaližen voimujupirdajan. Mez' sädi portretoiden äjüt, kuvazi muupäiväližen elon scenoid, pirdi istorižid-ki kuvid, ühtni päjumalanpertiden čomamahtoižhe formiteshe. Gravirujaks tegi ofortoiden serijoid, gravüroiden üks' serii om elefantanlul, no ned radod kändihe tetabikš mehen surman jäl'ghe päpaloin. Voib nähta äi kuvid Madridan [[Prado]]-muzejas.
+
+[[Pol'sar'soda]]n aigan pirdai jäi [[Madrid]]ha, kus sädi [[Bonapart Žozef|Bonapartan Žozefan]] modkuvan. Sil-žo aigal hän dokumentirui sodad ičeze grafižes ''[[Desastres de la Guerra]]''-serijas.
+
+== Tetabiden kuviden nimikirjutez ==
+Muupäiväližen elon scenad i rahvahaližed praznikad:
+* «Vihmankatuz», 1777;
+* «Astjoiden möi» i «Madridan torguz», 1778;
+* «Vänd pelotha», 1779;
+* «Nor' härg», 1780;
+* «Satatadud kivinik», 1786;
+* «Vänd begucal», 1791.
+
+Portretad:
+* Floridablank-grafan portret, 1782−1783;
+* «Osun-gercogan pereh», 1787;
+* A. Pontehos-markiznaižen portret, läz 1787;
+* Emänd Bermudes;
+* Fransisko Bajeu, Doktor Peral', molembad 1796;
+* Ferdinand Giimarde, 1798,
+* «La Tirana», 1799;
+* «Karl IV-kunigahan pereh» 1800;
+* Sabas Garsia, läz 1805;
+* Isabel' Kovos de Porsel', läz 1806;
+* T. Peresan portret, 1820;
+* P. de Molina, 1828.
 
 == Homaičendad ==
 <references/>
