*Empty MediaWiki Message*

--- a/Goja_Fransisko.mw
+++ b/Goja_Fransisko.mw
@@ -5,6 +5,7 @@
 }}
 '''Fransisko Goja''', täuz' nimi om '''Fransisko Hose de Goja i Lusjentes''' ({{lang-es|Francisco José de Goya y Lucientes}}; sünd. 30. keväz'ku 1746, [[Fuendetodos]] läz [[Saragos]]ad, [[Ispanii]] — kol. 16. sulaku 1828, [[Bordo]], [[Francii]]) oli [[Ispanii|ispanine]] voimujupirdai da gravirui, [[romantizm|romantižen]] voimujupirdandan luja ezitai.
 
+== Biografii ==
 Goja oli sündnu keskmäižen klassan kanzha, radoi ispanižen monarhijan tanhaližen voimujupirdajan. Mez' sädi portretoiden äjüt, kuvazi muupäiväližen elon scenoid, pirdi istorižid-ki kuvid, ühtni päjumalanpertiden čomamahtoižhe formiteshe. Gravirujaks tegi ofortoiden serijoid, gravüroiden üks' serii om elefantanlul, no ned radod kändihe tetabikš mehen surman jäl'ghe päpaloin. Voib nähta äi kuvid Madridan [[Prado]]-muzejas.
 
 [[Pol'sar'soda]]n aigan pirdai jäi [[Madrid]]ha, kus sädi [[Bonapart Žozef|Bonapartan Žozefan]] modkuvan. Sil-žo aigal hän dokumentirui sodad ičeze grafižes ''[[Desastres de la Guerra]]''-serijas.
