--- a/Goja_Fransisko.mw
+++ b/Goja_Fransisko.mw
@@ -3,10 +3,14 @@
 | изображение = Goya Self portrait with spectacles (Musee Goya Castres).jpg
 | описание изображения = Fransisko Goja (1797−1800, avtoportret)
 }}
-'''Fransisko Goja''', täuz' nimi om '''Fransisko Hose de Goja i Lusjentes''' ({{lang-es|Francisco José de Goya y Lucientes}}; sünd. 30. keväz'ku 1746, [[Fuendetodos]] läz [[Saragos]]ad, [[Ispanii]] — kol. 16. sulaku 1828, [[Bordo]], [[Francii]]) oli [[Ispanii|ispanine]] voimujupirdai da gravirui, [[romantizm|romantižen]] voimujupirdandan luja ezitai.
+'''Fransisko Goja''', täuz' nimi om '''Fransisko Hose de Goja i Lusjentes''' ({{lang-es|Francisco José de Goya y Lucientes}}; sünd. 30. keväz'ku 1746, [[Fuendetodos]] läz [[Saragos]]ad, [[Ispanii]] — kol. 16. sulaku 1828, [[Bordo]], [[Francii]]) oli [[Ispanii|ispanine]] voimujupirdai da gravirui, [[romantizm|romantižen]] voimujupirdandan luja ezitai, [[rokoko]]-stilin mastar.
+
+Sädamiželon pol'voz'sadas Goja pirdi läz 700 kuvad, tegi 280 ofortad i ümbri tuhas pirdatesid gobelenoiden täht.
 
 == Biografii ==
-Goja oli sündnu keskmäižen klassan kanzha, radoi ispanižen monarhijan tanhaližen voimujupirdajan. Mez' sädi portretoiden äjüt, kuvazi muupäiväližen elon scenoid, pirdi istorižid-ki kuvid, ühtni päjumalanpertiden čomamahtoižhe formiteshe. Gravirujaks tegi ofortoiden serijoid, gravüroiden üks' serii om elefantanlul, no ned radod kändihe tetabikš mehen surman jäl'ghe päpaloin. Voib nähta äi kuvid Madridan [[Prado]]-muzejas.
+Goja oli sündnu keskmäižen klassan kanzha, radoi ispanižen monarhijan tanhaližen voimujupirdajan. Mez' sädi portretoiden äjüt, kuvazi muupäiväližen elon scenoid, pirdi istorižid-ki kuvid, ühtni päjumalanpertiden čomamahtoižhe formiteshe (religijanscenad, pühämehed). Gravirujaks tegi ofortoiden serijoid, gravüroiden üks' serii om elefantanlul, no ned radod kändihe tetabikš mehen surman jäl'ghe päpaloin. Voib nähta äi kuvid Madridan [[Prado]]-muzejas.
+
+Pirdajan čomamahtoine kar'jer zavodihe vl 1771. Ezmäine publine rad om freskad Jumalanmaman del' Pilar kafedraližes bazilikpäjumalanpertiš ([[Saragos]]). Jäl'gmäine säduz om vn 1827 «Maidniknaine Bordospäi»-kuva
 
 [[Pol'sar'soda]]n aigan pirdai jäi [[Madrid]]ha, kus sädi [[Bonapart Žozef|Bonapartan Žozefan]] modkuvan. Sil-žo aigal hän dokumentirui sodad ičeze grafižes ''[[Desastres de la Guerra]]''-serijas.
 
@@ -20,10 +24,10 @@ Muupäiväližen elon scenad i rahvahaližed praznikad:
 * «Vänd begucal», 1791.
 
 Portretad:
-* Floridablank-grafan portret, 1782−1783;
-* «Osun-gercogan pereh», 1787;
+* Floridablank-graf i Goja, 1782−1783;
+* «Osuna-gercogan pereh», 1787;
 * A. Pontehos-markiznaižen portret, läz 1787;
-* Emänd Bermudes;
+* Emänd Sean Bermudes, 1792−1793;
 * Fransisko Bajeu, Doktor Peral', molembad 1796;
 * Ferdinand Giimarde, 1798,
 * «La Tirana», 1799;
