*Empty MediaWiki Message*

--- a/Goja_Fransisko.mw
+++ b/Goja_Fransisko.mw
@@ -10,7 +10,7 @@ Sädamiželon pol'voz'sadas Goja pirdi läz 700 kuvad, tegi 280 ofortad i ümbri
 == Biografii ==
 Goja oli sündnu keskmäižen klassan kanzha, radoi ispanižen monarhijan tanhaližen voimujupirdajan. Mez' sädi portretoiden äjüt, kuvazi muupäiväližen elon scenoid, pirdi istorižid-ki kuvid, ühtni päjumalanpertiden čomamahtoižhe formiteshe (religijanscenad, pühämehed). Gravirujaks tegi ofortoiden serijoid, gravüroiden üks' serii om elefantanlul, no ned radod kändihe tetabikš mehen surman jäl'ghe päpaloin. Voib nähta äi kuvid Madridan [[Prado]]-muzejas.
 
-Pirdajan čomamahtoine kar'jer zavodihe vl 1771. Ezmäine publine rad om freskad Jumalanmaman del' Pilar kafedraližes bazilikpäjumalanpertiš ([[Saragos]]). Jäl'gmäine säduz om vn 1827 «Maidniknaine Bordospäi»-kuva
+Pirdajan čomamahtoine kar'jer zavodihe vl 1771. Ezmäine publine rad om freskad Jumalanmaman del' Pilar kafedraližes bazilikpäjumalanpertiš ([[Saragos]]). Jäl'gmäine säduz om vn 1827 «Maidniknaine Bordospäi»-kuva.
 
 [[Pol'sar'soda]]n aigan pirdai jäi [[Madrid]]ha, kus sädi [[Bonapart Žozef|Bonapartan Žozefan]] modkuvan. Sil-žo aigal hän dokumentirui sodad ičeze grafižes ''[[Desastres de la Guerra]]''-serijas.
 
