*Empty MediaWiki Message*

--- a/Goja_Fransisko.mw
+++ b/Goja_Fransisko.mw
@@ -21,7 +21,7 @@ Muupäiväližen elon scenad i rahvahaližed praznikad:
 * «Vänd pelotha», 1779;
 * «Nor' härg», 1780;
 * «Satatadud kivinik», 1786;
-* «Vänd begucal», 1791.
+* «Vänd bukal», 1791.
 
 Portretad:
 * Floridablank-graf i Goja, 1782−1783;
