--- a/Pokači.mw
+++ b/Pokači.mw
@@ -1,12 +1,12 @@
 {{Eländpunkt
  | Nimi = Pokači<br />Покачи
- | Lidnanznam = Coat of Arms of Pokachi (Khanty-Mansia).png
- | Flag = Flag of Pokachi (Khanty-Mansyisky AO).png
+ | Lidnanznam = Pokachi COA (2013).jpg
+ | Flag = Flag of Pokachi (Yugra).png
  | Lidnanznam text = Pokačin lidnanznam
  | Flag text = Pokačin flag
  | Valdkund = Venäma
- | Eläjiden lugu = 17,905
- | Voz' = 2017
+ | Eläjiden lugu = 18,217
+ | Voz' = 2021
  | Pind = 21.84
  | Fail =
  | Pämez' = Vladimir Stepura<br />(reduku 2015—)
@@ -14,7 +14,7 @@
  | Avtokod = 86. 186
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
 }}
-'''Pokači''' ([[venäkel'|ven]]. da {{lang-tt|Покачи}}, {{lang-uk|Покачі}}, {{lang-ro|Pocaci}}) om [[Venäma]]n lidn da lidnümbrik [[Hantin da Mansin avtonomine ümbrik|Hantin da Mansin avtonomižen ümbrikon]] päivnouzmas. Om ümbärtud [[Nižnevartovskan rajon]]an territorijal.
+'''Pokači''' ([[venäkel'|ven]]. da {{lang-tt|Покачи}}, {{lang-uk|Покачі}}) om [[Venäma]]n lidn da lidnümbrik [[Hantin da Mansin avtonomine ümbrik|Hantin da Mansin avtonomižen ümbrikon]] päivnouzmas. Om ümbärtud [[Nižnevartovskan rajon]]an territorijal.
 
 == Istorii ==
 Eländpunktan aluz om pandud vl 1978 kuti ''Pokači-vahtžilo'' samha [[kivivoi]]d. Nimitihe [[hantilaižed|hantilaižiden]] Pokačev-rodun mödhe, kenen mal burautihe satusekahid mareiguid. Vn 1983 31. päiväl redukud kätihe radnikžiloks. Vl 1984 sauvoškanzihe ut Pokači-žilod 15 kilometras edeližespäi. Vn 1986 24. päiväl kezakud žilo oli alištunu Langepas-lidnan nevondkundale. Vl 1992 žilo sai lidnan statusad.
