--- a/Tobol'sk.mw
+++ b/Tobol'sk.mw
@@ -5,9 +5,9 @@
  | Lidnanznam text = Tobol'skan lidnanznam
  | Flag text = Tobol'skan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 98,886
- | Voz' = 2017
- | Pind = 239
+ | Eläjiden lugu = 98,772
+ | Voz' = 2021
+ | Pind = 222
  | Fail = Tobolsk Kremlin by Dmitry Medvedev.jpg
  | Pämez' = Vladimir Mazur<br />(reduku 2012—)
  | Telefonkod = +7-3456-xxx-xxx
@@ -29,9 +29,24 @@ Lidn sijadase agjan pohjoižes, [[Irtiš]]-jogen ({{lang-tt|Иртеш}}) oiktal
 Sumkino-žilo (3531 rist. vl 2017) mülüb lidnümbrikho Tobol'skan ližaks. Lidnümbrikon pind — 222 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 99 694 ristitud, lidnümbrikon — 103 583 ristitud. Kaikiš suremb lidnan ristitišt oli 101 100 eläjad vl 2005. Vl 2017 kaik 102 417 ristitud elihe lidnümbrikos.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 99 694 ristitud, lidnümbrikon — 103 583 ristitud. Kaikiš suremb lidnan ristitišt oli 101 100 eläjad vl 2005. Vl 2017 kaik 98 886 ristitud elihe lidnas, 102 417 ristitud kaikes lidnümbrikos.
 
 Rahvahad (lidn, enamba 0,4% vl 2016): [[venälaižed]] — 73,3%, [[totarlaižed]] — 16,6%, [[ukrainalaižed]] — 1,8%, [[azerbaidžanlaižed]] — 0,8%, [[saksalaižed]] — 0,4%, [[baškiralaižed]] — 0,4%, [[vaugedvenälaižed]] — 0,4%, toižed rahvahad — 1,8%, rahvahuden ozutandata — 4,5%.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Stele to Yermak in Tobolsk.jpg|Jermakan monument
+Софийско-Успенский собор (Тобольск).jpg|Sofijan melevuden i Jumalanmaman Emäganpäivän kafedraline päjumalanpert' (ortodoksine hristanuskond) Tobol'skan kremliš, vn 2011 nägu (päpala om saudud vll 1683−1686)
+Тобольская мечеть.jpg|Tobol'skan islaman vanh pühäpert', vn 2016 nägu (om saudud 19. voz'sadal)
+Tobolsk-Polimer chemical plant.jpeg|Kivivoihimine «Tobol'sk-Polimer»-kompleks vl 2013
+Тобольская ТЭЦ.JPG|Tobol'skan LEK vl 2011
+Тобольский Индустриальный Институт - panoramio.jpg|Tobol'skan industrialine institut (2010)
+RozyLuxemburg7 Tobolsk.JPG|Tobol'skan pedagogine institut (2015)
+Губернский музей.JPG|Čomamahtoine muzei (2012, vll 1930−1955 totaran pedagogine škol)
+Гостиница Славянская - panoramio.jpg|«Slavänskaja»-adivpert' vl 2010
+Airport Tobolsk Remezov (RMZ).jpg|Remezov-lendimport (2021, edel avaidust)
+Railway Station of Tobolsk.JPG|Tobol'sk-päraudtestancijan sauvuz vl 2012
+</gallery>
 
 == Irdkosketused ==
 * [http://www.dumatobolsk.ru/ Lidnan Duman oficialine sait (''dumatobolsk.ru'').] {{ref-ru}}
