*Empty MediaWiki Message*

--- a/Tobol'sk.mw
+++ b/Tobol'sk.mw
@@ -40,7 +40,7 @@ Stele to Yermak in Tobolsk.jpg|Jermakan monument
 Тобольская мечеть.jpg|Tobol'skan islaman vanh pühäpert', vn 2016 nägu (om saudud 19. voz'sadal)
 Tobolsk-Polimer chemical plant.jpeg|Kivivoihimine «Tobol'sk-Polimer»-kompleks vl 2013
 Тобольская ТЭЦ.JPG|Tobol'skan LEK vl 2011
-Тобольский Индустриальный Институт - panoramio.jpg|Tobol'skan industrialine institut (2010)
+Тобольский Индустриальный Институт - panoramio.jpg|Tobol'skan industrialine institut (2010, Tümenin industrialižen universitetan filial)
 RozyLuxemburg7 Tobolsk.JPG|Tobol'skan pedagogine institut (2015)
 Губернский музей.JPG|Čomamahtoine muzei (2012, vll 1930−1955 totaran pedagogine škol)
 Гостиница Славянская - panoramio.jpg|«Slavänskaja»-adivpert' vl 2010
