--- a/Zavodoukovsk.mw
+++ b/Zavodoukovsk.mw
@@ -5,10 +5,10 @@
  | Lidnanznam text = Zavodoukovskan lidnanznam
  | Flag text = Zavodoukovskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 26,006
- | Voz' = 2017
- | Pind = 32.02
- | Fail = Zavodoukovsk Station (2011).jpg
+ | Eläjiden lugu = 26,477
+ | Voz' = 2021
+ | Pind = 20.96
+ | Fail = Zavodoukovsk Selmash.jpg
  | Pämez' = Aleksandr Anohin<br />(reduku 2011—)
  | Telefonkod = +7-34542-xx-xxx
  | Avtokod = 72
@@ -27,7 +27,18 @@ Zavodoukovsk šingotase plastikan i polimeriden tegimel, mašiništonsauvomižen
 Lidn sijadase penen [[Uk]]-jogen randoil (55 km pitte, [[Tobol]]an oiged ližajogi), 75 metrad ü.m.t. keskmäižel korktusel. Matkad [[Tümen'|Tümenihesai]] om 94 km lodeheze orhal, 103 km avtotedme vai [[Transsib]]-raudtedme. Lähembaine lidn om [[Jalutorovsk]] 21 km lodeheze orhal, 26 km avtotedme vai raudtedme. «Tümen' — [[Omsk]]»-trass (R-402) om lidnan pohjoižröunaks.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 25 647 ristitud, lidnümbrikon viž ühesandest. Kaikiš suremb lidnan ristitišt om 25..26 tuh. eläjid vspäi 1989 (26 800 rist. vl 1998). [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Jurgii-vägestusenkandajan jumalanpert' om saudud lidnas vll 1993−2004.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 25 647 ristitud, lidnümbrikon viž ühesandest. Kaikiš suremb lidnan ristitišt om 25..26 tuh. eläjid vspäi 1989 (26 800 rist. vl 1998).
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Jurgii-vägestusenkandajan jumalanpert' om saudud lidnas vll 1993−2004.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Zvd centr.jpg|Lidnan keskuz (2019), Zavodoukovskan lidnümbrikon administracijan sauvuz om vauged rusttanke tagamal
+Zavodoukovsk Temple.jpg|Ph. Jurgii-vägestusenkandajan jumalanpert', vn 2005 nägu
+Zavodoukovsk Sovetskaya street.jpg|Sovetskai-ird i elevatoran sauvuz vl 2005
+Zavodoukovsk Post Office.jpg|Telekommunikacijoiden i počtan sauvuz vl 2005
+Zavodoukovsk Station (2011).jpg|Zavodoukovsk-raudtestancii vl 2011
+</gallery>
 
 == Irdkosketused ==
 * [http://zavodoukovsk.admtyumen.ru/ Lidnümbrikon tobmuden aluzkundoiden oficialine sait (''zavodoukovsk.admtyumen.ru'').] {{ref-ru}}
