*Empty MediaWiki Message*

--- a/Ispanijan_kel'.mw
+++ b/Ispanijan_kel'.mw
@@ -40,7 +40,7 @@
 |Z
 |}
 
-[[Fail:Map-Hispanophone World 2000.png|thumb|left|300px|Ispanijan kelen leviganduz vl 2000]]
+[[Fail:Hispanophone global world map language.svg|thumb|left|300px|Ispanijan kelen leviganduz vl 2000]]
 '''Ispanijan''' vai '''Kastilijan kel'''' (ičeze nimitused: ''español, castellano'') om [[romanižed keled|ibero-romanine kel']]. Ispanijan kirjutuzkel' om [[latinan kirjamišt]]on pohjal.
 
 Reguliruindorganizacii om «Ispanijan kelen akademijoiden associacii» (isp.: ''Asociación de Academias de la Lengua Española'', ASALE) vspäi 1951, päfater sijadase [[Madrid]]as, om 22 ühtnijad mail'madme.
