--- a/Olimpižed_vändod.mw
+++ b/Olimpižed_vändod.mw
@@ -23,5 +23,7 @@ Vspäi 1960 keratas Kezaližid [[Paralimpižed vändod|Paralimpižid vändoid]],
 
 == Irdkosketused ==
 * [http://www.olympic.org/ Rahvahidenkeskeižen olimpižen komitetan oficialine sait (''olympic.org'').] {{ref-en}}
+{{Commons|Olympic Games}}
+
 [[Kategorii:Olimpiadad| ]]
 [[Kategorii:Tegod]]
