--- a/Olimpižed_vändod.mw
+++ b/Olimpižed_vändod.mw
@@ -21,6 +21,9 @@ Vspäi 1960 keratas Kezaližid [[Paralimpižed vändod|Paralimpižid vändoid]],
 * [[Tün'valdmerižed vändod]]
 * [[Universiad]]
 
+== Homaičendad ==
+<references/>
+
 == Irdkosketused ==
 * [http://www.olympic.org/ Rahvahidenkeskeižen olimpižen komitetan oficialine sait (''olympic.org'').] {{ref-en}}
 {{Commons|Olympic Games}}
