--- a/Avstralijan_valdkundznam.mw
+++ b/Avstralijan_valdkundznam.mw
@@ -1,7 +1,9 @@
 [[Fail:Coat of Arms of Australia.svg|right|250px]]
 '''Avstralijan valdkundznam''' ({{lang-en|Coat of arms of Australia}}) om [[Avstralijan Ühtištuz]]-valdkundan üks' oficialižiš simvolišpäi. Nügüdläine versii om lahjoitud britanižel [[Georg V]]-kunigahal vn [[1912]] 19. päiväl sügüz'kud.
 
-Štatoiden da territorijoiden znamad oma somuzlaudal. Sur' rusked [[kenguru]] i [[emu]]-straus pid'oiteldas sidä. Avstralijan Federacijan (valdkundan eziauguine nimituz vl 1901) seičemeagjaine tähtaz kuvadase ülähäs. Tähthan agjad simvoliziruidas štatoid da territorijoid.
+Štatoiden da territorijoiden znamad oma somuzlaudal. Endemižed sur' rusked [[kenguru]] i [[emu]]-straus pid'oiteldas sidä. Avstralijan Federacijan (valdkundan eziauguine nimituz vl 1901) seičemeagjaine tähtaz kuvadase ülähäs. Tähthan agjad simvoliziruidas štatoid da territorijoid. Valdkundan nimituz kuvadase znaman alahas.
+
+Aluz, deviz i änikoičii [[akacii]] tagamal ei mülügoi valdkundznamha oficialižešti.
 
 == Kacu mugažo ==
 * [[Avstralijan flag]]
