--- a/Avstralijan_valdkundznam.mw
+++ b/Avstralijan_valdkundznam.mw
@@ -5,6 +5,10 @@
 
 Aluz, deviz i änikoičii [[akacii]] tagamal ei mülügoi valdkundznamha oficialižešti.
 
+== Edeline versii ==
+[[Fail:Coat of arms of Australia (1908–1912).svg|thumb|right|250px|Avstralijan ezmäine valdkundznam (1908−1912)]]
+Edeline, ezmäine Avstralijan valdkundznam oli vahvištadud Vil'son Dobsan pirdatesen mödhe vl 1908 i oli oficialine vhesai 1912, hot' znaman kävutand jätksihe vhesai 1966 erasti, oz., rahuzil.
+
 == Kacu mugažo ==
 * [[Avstralijan flag]]
 
