--- a/Kuznečihan_sild.mw
+++ b/Kuznečihan_sild.mw
@@ -1,7 +1,9 @@
 [[Fail:Kuznechevsky bridge.jpg|thumb|right|250px|Kuznečihan sild]]
-'''Kuznečihan sild''' ({{lang-ru|Кузнечевский мост}}) om sild [[Arhangel'sk]]an keskuses [[Kuznečih (jogi)|Kuznečih-joges]] päliči ([[Pohjoine Dvin|Pohjoižen Dvinan]] hijam). Ühtištoitab [[Solombal]]ad lidnan keskusenke. Om 385 metrad pitte.
+'''Kuznečihan sild''' ({{lang-ru|Кузнечевский мост}}) om avtotesild [[Arhangel'sk]]an keskuzpalas [[Kuznečih (jogi)|Kuznečih-joges]] päliči ([[Pohjoine Dvin|Pohjoižen Dvinan]] hijam). Ühtenzoitab [[Solombal]]an rajonad lidnan keskusenke. Sauvuz om 385 metrad pitte.
 
-Om saudud vl 1924 kuti sild pumateriališpäi. Vspäi 1956 om saudud möst, metallasine da betonine. Vl 2003 sur' kohenduz oli, kebnenzoitihe sildad. Sild om avtoiden da jüguavtoiden täht (penemb mi 10 tonnad), mugažo jaugnikoiden täht. Vozil 1924-2003 tramvaited oliba sildal.
+Ezmäine sild sen sijas oli saudud pumateriališpäi vl 1924. Vspäi 1956 om saudud möst, metallasine da betonine. Vl 2003 sur' kohenduz mäni, kebnenzoitihe sildad. Sild om avtoiden da jüguavtoiden täht (penemb mi 10 tonnad), mugažo jaugnikoiden täht. Vozil 1924−2003 tramvaited oliba sildal.
+
+{{Commons|Category:Kuznechevsky Bridge}}
 
 {{stub}}
 [[Kategorii:Arhangel'skan sildad]]
