--- a/Kuznečihan_sild.mw
+++ b/Kuznečihan_sild.mw
@@ -1,7 +1,13 @@
 [[Fail:Kuznechevsky bridge.jpg|thumb|right|250px|Kuznečihan sild]]
-'''Kuznečihan sild''' ({{lang-ru|Кузнечевский мост}}) om avtotesild [[Arhangel'sk]]an keskuzpalas [[Kuznečih (jogi)|Kuznečih-joges]] päliči ([[Pohjoine Dvin|Pohjoižen Dvinan]] hijam). Ühtenzoitab [[Solombal]]an rajonad lidnan keskusenke. Sauvuz om 385 metrad pitte.
+'''Kuznečihan sild''' ({{lang-ru|Кузнечевский мост}}) om rippui avtotesild [[Arhangel'sk]]an keskuzpalas [[Kuznečih (jogi)|Kuznečih-joges]] päliči ([[Pohjoine Dvin|Pohjoižen Dvinan]] hijam). Ühtenzoitab [[Solombal]]an rajonad lidnan keskusenke. Sauvuz om 385 metrad pitte i 20,4 m levette, päkeskustan piduz om 124 m.
 
-Ezmäine sild sen sijas oli saudud pumateriališpäi vl 1924. Vspäi 1956 om saudud möst, metallasine da betonine. Vl 2003 sur' kohenduz mäni, kebnenzoitihe sildad. Sild om avtoiden da jüguavtoiden täht (penemb mi 10 tonnad), mugažo jaugnikoiden täht. Vozil 1924−2003 tramvaited oliba sildal.
+Ezmäine kaikenaigaine sild sen sijas oli saudud pumateriališpäi raudasižil alusil vll 1923−1924, edel sidä pordaigaližed maksližed puižed sildad oliba olmas vspäi 1805, rušihe niid joga kevädel. Vspäi 1956 kaikenaigaine sild om saudud möst, metallasine da betonine. Vl 2003 sur' kohenduz mäni, kebnenzoitihe sildad. Vozil 1924−2003 tramvaited oliba sildal.
+
+Sild om avtoiden da jüguavtoiden täht (penemb mi 10 tonnad), mugažo jaugnikoiden täht.
+
+== Homaičendad ==
+<references />
+
 
 {{Commons|Category:Kuznechevsky Bridge}}
 
