--- a/Kuznečihan_sild.mw
+++ b/Kuznečihan_sild.mw
@@ -1,9 +1,14 @@
 [[Fail:Kuznechevsky bridge.jpg|thumb|right|250px|Kuznečihan sild]]
-'''Kuznečihan sild''' ({{lang-ru|Кузнечевский мост}}) om rippui avtotesild [[Arhangel'sk]]an keskuzpalas [[Kuznečih (jogi)|Kuznečih-joges]] päliči ([[Pohjoine Dvin|Pohjoižen Dvinan]] hijam). Ühtenzoitab [[Solombal]]an rajonad lidnan keskusenke. Sauvuz om 385 metrad pitte i 20,4 m levette, päkeskustan piduz om 124 m.
-
-Ezmäine kaikenaigaine sild sen sijas oli saudud pumateriališpäi raudasižil alusil vll 1923−1924, edel sidä pordaigaližed maksližed puižed sildad oliba olmas vspäi 1805, rušihe niid joga kevädel. Vspäi 1956 kaikenaigaine sild om saudud möst, metallasine da betonine. Vl 2003 sur' kohenduz mäni, kebnenzoitihe sildad. Vozil 1924−2003 tramvaited oliba sildal.
+'''Kuznečihan sild''' ({{lang-ru|Кузнечевский мост}}) om rippui vižkeskustaine avtotesild [[Arhangel'sk]]an keskuzpalas [[Kuznečih (jogi)|Kuznečih-joges]] päliči ([[Pohjoine Dvin|Pohjoižen Dvinan]] hijam). Ühtenzoitab [[Solombal]]an rajonad lidnan keskusenke. Sauvuz om 385 metrad pitte i 20,4 m levette, päkeskustan piduz om 124 m.
 
 Sild om avtoiden da jüguavtoiden täht (penemb mi 10 tonnad), mugažo jaugnikoiden täht.
+
+== Istorii ==
+Pordaigaližed puižed sildad oliba olmas sil-žo sijal vspäi 1805. Ned oliba rados kezaaigan vaiše, rušihe keväzližen sur'veden i jän ujundan tagut. Vl 1867 saudihe ut pordaigališt sildad lidnan rahoišpäi. Tramvaid ajaleškanziba sidme vl 1917.
+
+Ezmäine kaikenaigaine sild sen sijas oli saudud pumateriališpäi raudasižil alusil vll 1923−1924. Vn 1924 keväzline sur'vezi mureni sildan keskustoid, kävutihe niid haugoikš. Saudihe pordaigališt sildad möst. Projektiruihe ut kaikenaigašt sildad i letihe alusid eskai, no azotihe sauvondradoid [[Sur' Tatanmaine soda|Suren sodan]] taguiči.
+
+Vll 1953−1956 kaikenaigaine sild om saudud möst, metallasine da betonine. Vhesai 2002 tramvaited oliba sildal. Vl 2003 sur' kohenduz mäni, kebnenzoitihe sildad i röunatihe likkuimiden vedust. Pullosild om senno suriden jüguavtoiden täht. Uden sildan sauvond om vaiše planoiš.
 
 == Homaičendad ==
 <references />
