--- a/Kuznečihan_sild.mw
+++ b/Kuznečihan_sild.mw
@@ -4,9 +4,9 @@
 Sild om avtoiden da jüguavtoiden täht (penemb mi 10 tonnad), mugažo jaugnikoiden täht.
 
 == Istorii ==
-Pordaigaližed puižed sildad oliba olmas sil-žo sijal vspäi 1805. Ned oliba rados kezaaigan vaiše, rušihe keväzližen sur'veden i jän ujundan tagut. Vl 1867 saudihe ut pordaigališt sildad lidnan rahoišpäi. Tramvaid ajaleškanziba sidme vl 1917.
+Ezmäine pordaigaline maksline puine sild oli olmas sil-žo sijal vspäi 1805. Sild oli rados kezaaigan vaiše, rušihe keväzližen sur'veden i jän ujundan tagut. Vl 1867 saudihe ut pordaigališt sildad lidnan rahoišpäi. Tramvaid ajaškanziba sidme vl 1917.
 
-Ezmäine kaikenaigaine sild sen sijas oli saudud pumateriališpäi raudasižil alusil vll 1923−1924. Vn 1924 keväzline sur'vezi mureni sildan keskustoid, kävutihe niid haugoikš. Saudihe pordaigališt sildad möst. Projektiruihe ut kaikenaigašt sildad i letihe alusid eskai, no azotihe sauvondradoid [[Sur' Tatanmaine soda|Suren sodan]] taguiči.
+Ezmäine kaikenaigaine sild sen sijas oli saudud pumateriališpäi raudasižil alusil vll 1923−1924. Vn 1924 keväzline sur'vezi mureni sildan keskustoid, kävutihe niid haugoikš. Saudihe pordaigališt sildad möst. [[Grigorii Perederii]]-inžener projektirui ut kaikenaigašt sildad vspäi 1935, letihe alusid, no azotadihe sauvondradoid [[Sur' Tatanmaine soda|Suren sodan]] taguiči.
 
 Vll 1953−1956 kaikenaigaine sild om saudud möst, metallasine da betonine. Vhesai 2002 tramvaited oliba sildal. Vl 2003 sur' kohenduz mäni, kebnenzoitihe sildad i röunatihe likkuimiden vedust. Pullosild om senno suriden jüguavtoiden täht. Uden sildan sauvond om vaiše planoiš.
 
