*Empty MediaWiki Message*

--- a/Kuznečihan_sild.mw
+++ b/Kuznečihan_sild.mw
@@ -1,4 +1,4 @@
-[[Fail:Kuznechevsky bridge.jpg|thumb|right|250px|Kuznečihan sild]]
+[[Fail:Kuznechevsky bridge.jpg|thumb|right|250px|Kuznečihan sild vl 2008]]
 '''Kuznečihan sild''' ({{lang-ru|Кузнечевский мост}}) om rippui vižkeskustaine avtotesild [[Arhangel'sk]]an keskuzpalas [[Kuznečih (jogi)|Kuznečih-joges]] päliči ([[Pohjoine Dvin|Pohjoižen Dvinan]] hijam). Ühtenzoitab [[Solombal]]an rajonad lidnan keskusenke. Sauvuz om 385 metrad pitte i 20,4 m levette, päkeskustan piduz om 124 m.
 
 Sild om avtoiden da jüguavtoiden täht (penemb mi 10 tonnad), mugažo jaugnikoiden täht.
