--- a/Išim_(lidn,_Tümenin_agj).mw
+++ b/Išim_(lidn,_Tümenin_agj).mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Išiman lidnanznam
  | Flag text = Išiman flag
  | Valdkund = Venäma
- | Eläjiden lugu = 65,259
- | Voz' = 2017
+ | Eläjiden lugu = 64,010
+ | Voz' = 2021
  | Pind = 46.1
  | Fail = View of the city of Ishim. - panoramio.jpg
  | Pämez' = Fedor Šiškin<br />(sulaku 2012—)
@@ -29,9 +29,20 @@ Lidn sijadase Išim-jogen hural randal ([[Irtiš]]an hura ližajogi), 82 metrad 
 Išim om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 65 243 ristitud. Kaikiš suremb ristitišt oli 67 800 eläjad vl 2003. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' päjumalanpertid da jumalanpert' oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 65 243 ristitud. Kaikiš suremb ristitišt oli 67 800 eläjad vl 2003.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] kaks' päjumalanpertid da jumalanpert' oma olmas lidnas.
 
 Rahvahad (2010): [[venälaižed]] — 95,5%, toižed rahvahad — 4,5%.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Административное здание г.Ишим.jpg|Išim-lidnan administracijan sauvuz (2018)
+Epiphany Cathedral in Ishim - panoramio.jpg|Jumalannägundan päjumalanpert', vn 2014 nägu (om saudud vl 1793)
+ИПИ им. П.П. Ершова.jpg|Išiman pedagogine institut Petr Jeršovan nimed vl 2019 (Tümenin valdkundaližen universitetan filial)
+Кинотеатр.JPG|Išim-lidnan kul'turkeskusen kinoteatr (2013)
+Ishim train station, may 2, 2011.jpg|Išim-päraudtestancii vl 2008
+</gallery>
 
 == Irdkosketused ==
 * [http://ishim.admtyumen.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''ishim.admtyumen.ru'').] {{ref-ru}}
