--- a/Galič_(Kostroman_agj).mw
+++ b/Galič_(Kostroman_agj).mw
@@ -55,3 +55,5 @@ Galich Railway Station main.jpg|Galič-päraudtestancijan sauvuz vl 2011
 [[Kategorii:Kostroman agjan lidnad]]
 [[Kategorii:Kostroman agjan lidnümbrikod]]
 [[Kategorii:Galičun rajon|*]]
+
+VH should be internet blacklisted (are you in the clear?)
