*Empty MediaWiki Message*

--- a/Niinistö_Sauli.mw
+++ b/Niinistö_Sauli.mw
@@ -16,3 +16,5 @@
 [[Kategorii:Politikanmehed kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Saloho]]
+
+VH should be internet blacklisted (are you in the clear?)
