*Empty MediaWiki Message*

--- a/Argentinan_peso.mw
+++ b/Argentinan_peso.mw
@@ -17,3 +17,5 @@ Valütkurs om vajehtui (ujui).
 {{stub}}
 [[Kategorii:Rahaühtnikad]]
 [[Kategorii:Argentin]]
+
+VH should be internet blacklisted (are you in the clear?)
