*Empty MediaWiki Message*

--- a/Kivi.mw
+++ b/Kivi.mw
@@ -4,3 +4,5 @@
 * [[Kivi (marj)|Kivi]] — marj.
 * [[Kivi (kucundnimi)|Kivi]] — kucundnimi.
 {{z}}
+
+VH should be internet blacklisted (are you in the clear?)
