--- a/Šali.mw
+++ b/Šali.mw
@@ -41,3 +41,5 @@ Rahvahad (enamba 0,4% vl 2010): [[čečenalaižed]] — 90,2%, [[venälaižed]] 
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 [[Kategorii:Čečenijan Tazovaldkundan lidnad]]
 [[Kategorii:Šalin rajon|*]]
+
+VH should be internet blacklisted (are you in the clear?)
