--- a/Asad_Bašar.mw
+++ b/Asad_Bašar.mw
@@ -14,3 +14,5 @@
 [[Kategorii:Politikanmehed kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Damaskha]]
+
+VH should be internet blacklisted (are you in the clear?)
