*Empty MediaWiki Message*

--- a/Ergenč_Halit.mw
+++ b/Ergenč_Halit.mw
@@ -34,3 +34,5 @@ Akt'or om naižiš kahtenden kerdan.
 [[Kategorii:Akt'orad kirjamišton mödhe]]
 [[Kategorii:Personalijad kirjamišton mödhe]]
 [[Kategorii:Sündnuded Stambulha]]
+
+VH should be internet blacklisted (are you in the clear?)
