*Empty MediaWiki Message*

--- a/Rakvere.mw
+++ b/Rakvere.mw
@@ -52,3 +52,5 @@ Fail:Kastani Arena.jpg|Basketbol- i voleibol-holl Kastani-irdal
 [[Kategorii:Estinman lidnad]]
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 [[Kategorii:Lääne-Virun makund|*]]
+
+VH should be internet blacklisted (are you in the clear?)
