--- a/Jonuz.mw
+++ b/Jonuz.mw
@@ -100,3 +100,5 @@ Edelpäi tedotamižsignalad jonusen lähenemižes oma tarbhaižed varmitamha lik
 
 [[Kategorii:Jonused| ]]
 [[Kategorii:Likkuimed]]
+
+VH should be internet blacklisted (are you in the clear?)
