--- a/Šergill_Džimmi.mw
+++ b/Šergill_Džimmi.mw
@@ -1,6 +1,6 @@
 {{Personalii
-| изображение = Jimmy Shergill FilmiTadka.JPG
-| описание изображения = Džimmi Šergill vn 2011 keväz'kus
+| изображение = Jimmy Shergill.jpg
+| описание изображения = Džimmi Šergill [[Mumbai]]n Playboy-klubas vl 2016
 }}
 '''Džimmi Šergill''' ({{lang-pa|ਜਿੰਮੀ ਸ਼ੇਰਗਿੱਲ}}, {{lang-hi|जिम्मी शेरगिल}}, {{lang-en|Jimmy Shergill}}), todesine nimi om '''Džasdžit Singh Gill''' (angl. ''Jasjit Singh Gill''; sünd. [[3. tal'vku]] [[1970]], [[Gorakhpur]], [[Uttar Pradeš]], [[Indii]]), om indijalaine akt'or da prodüser.
 
