--- a/Seišelan_Sared.mw
+++ b/Seišelan_Sared.mw
@@ -32,12 +32,12 @@ Seišelad sijadasoiš pohjoižpolehe [[Madagaskar]]aspäi.
 Seišelan Sariden randad lainištab [[Indine valdmeri]]. Randanpird — 491 km.
 
 == Politine sistem ==
-[[Fail:Seychelles National Assembly.jpg|thumb|right|250px|Seišeloiden parlamentan pert' [[Viktorii (lidn, Seišelad)|Viktorii]]-pälidnas.]]
+[[Fail:Seventh Seychelles National Assembly.jpg|thumb|right|250px|Seišeloiden parlamentan pert' [[Viktorii (lidn, Seišelad)|Viktorii]]-pälidnas i sen seičemenz' kucund vl 2020]]
 Ohjandusen form om unitarine [[prezidentine tazovaldkund|prezidentine]] tazovaldkund äjiden partijoiden sistemanke. Valdkundan da ohjastusen pämez' om prezident ({{lang-crs|Prezidan Larepiblik Sesel}}, {{lang-fr|Président de la République des Seychelles}}, {{lang-en|President of the Republic of Seychelles}}). Kaik rahvaz valičeb händast videks vodeks, üks' kahtenz' strok om voimusine.
 
-Käskusenandai tobmuz om üks'kodine parlament. Se om Rahvahaline Suim ({{lang-crs|Lasanble Nasyonal}}, {{lang-fr|Assemblée nationale}}, {{lang-en|National Assembly}}) 33 ezitajanke. Heiden valdatusiden strok om viž vot, kaik rahvaz valičeb.
+Käskusenandai tobmuz om üks'kodine parlament. Se om Rahvahaline Suim ({{lang-crs|Lasanble Nasyonal}}, {{lang-fr|Assemblée nationale}}, {{lang-en|National Assembly}}) 35 ezitajanke. Heiden valdatusiden strok om viž vot, kaik rahvaz valičeb.
 
-Parlamentan ühtnijoiden järgenduseližed valičendad oliba vn 2016 8.-10. päivil sügüz'kud. Enzne Džeims Mišel'-prezident andoi valdatusid [[For Denni|Denni For]]-varaprezidentale edel ičeze koumanden strokun lopud i läksi rata oppozicijan partijan lideraks parlamentas valičendoiden jäl'ghe. Vs 2016 redukun 16. päiväspäi Denni For tuleb radho udenke radnikusenke.
+Seišeloiden generaližed valičendad oliba vn 2020 22.-24. päivil redukud, valitihe valdkundan prezidentad (järgenduseližed) i parlamentan ühtnijoid (edelstrokuižed valičendad ühtenzoitmaha niid prezidentan valičendoidenke). Voziden 2016−2020 [[For Denni|Denni For]]-prezident sai kilad. Prezident om Uovel Ramkalavan vn 2020 redukun 26. päiväspäi (sai 54,91% änid), hän oli parlamentižen oppozicijan lideraks vll 1998−2011 and 2016−2020, ühtni prezidentan edeližihe nellhä valičendoihe (2001, 2006, 2011, 2016), no sai kildust joga kerdan enamba mi 40% änid rezul'tatanke. Parlamentan seičemenz' kucund om valitud da radab vn 2020 redukuspäi.
 
 == Administrativiž-territorialine jagand ==
 &nbsp;&nbsp;&nbsp;''Kacu kirjutuz: [[Seišelan Sariden administrativiž-territorialine jagand]].''
