--- a/Seišelan_Sared.mw
+++ b/Seišelan_Sared.mw
@@ -11,7 +11,7 @@
 | Pind = 455
 | Kart = LocationSeychelles.png
 | Kel' = [[seišelan kel'|seišelan]], [[francijan kel'|francijan]], [[anglijan kel'|anglijan]]
-| Valdkundan pämez' = [[For Denni|Denni For]]
+| Valdkundan pämez' = [[Ramkalavan Uovel|Uovel Ramkalavan]]
 | Päministr = ''eile olmas''
 | Religii = [[hristanuskond]]
 | Valüt = [[Seišelan rupii]] (SCR)
@@ -37,7 +37,7 @@ Ohjandusen form om unitarine [[prezidentine tazovaldkund|prezidentine]] tazovald
 
 Käskusenandai tobmuz om üks'kodine parlament. Se om Rahvahaline Suim ({{lang-crs|Lasanble Nasyonal}}, {{lang-fr|Assemblée nationale}}, {{lang-en|National Assembly}}) 35 ezitajanke. Heiden valdatusiden strok om viž vot, kaik rahvaz valičeb.
 
-Seišeloiden generaližed valičendad oliba vn 2020 22.-24. päivil redukud, valitihe valdkundan prezidentad (järgenduseližed) i parlamentan ühtnijoid (edelstrokuižed valičendad ühtenzoitmaha niid prezidentan valičendoidenke). Voziden 2016−2020 [[For Denni|Denni For]]-prezident sai kilad. Prezident om Uovel Ramkalavan vn 2020 redukun 26. päiväspäi (sai 54,91% änid), hän oli parlamentižen oppozicijan lideraks vll 1998−2011 and 2016−2020, ühtni prezidentan edeližihe nellhä valičendoihe (2001, 2006, 2011, 2016), no sai kildust joga kerdan enamba mi 40% änid rezul'tatanke. Parlamentan seičemenz' kucund om valitud da radab vn 2020 redukuspäi.
+Seišeloiden generaližed valičendad oliba vn 2020 22.-24. päivil redukud, valitihe valdkundan prezidentad (järgenduseližed) i parlamentan ühtnijoid (edelstrokuižed valičendad ühtenzoitmaha niid prezidentan valičendoidenke). Voziden 2016−2020 [[For Denni|Denni For]]-prezident sai kilad. Prezident om [[Ramkalavan Uovel|Uovel Ramkalavan]] vn 2020 redukun 26. päiväspäi (sai 54,91% änid), hän oli parlamentižen oppozicijan lideraks vll 1998−2011 and 2016−2020, ühtni prezidentan edeližihe nellhä valičendoihe (2001, 2006, 2011, 2016), no sai kildust joga kerdan enamba mi 40% änid rezul'tatanke. Parlamentan seičemenz' kucund om valitud da radab vn 2020 redukuspäi.
 
 == Administrativiž-territorialine jagand ==
 &nbsp;&nbsp;&nbsp;''Kacu kirjutuz: [[Seišelan Sariden administrativiž-territorialine jagand]].''
