--- a/Gatčin.mw
+++ b/Gatčin.mw
@@ -58,9 +58,10 @@ Om specialižen opendusen aluzkundoid lidnas:
 Gatchina Palace at restoration.jpg|Suren Gatčinan pert'kulun ühthine nägu (2021)
 2012-07-11 Гатчинский Павловский собор.jpg|Ph. Pauloi-apostolan päjumalanpert' vl 2012
 School № 8 in Gatchina.jpg|Škol nomer kahesa
+Gatchina. October 25 th Avenue, 1. House of Culture.JPG|Kul'turkeskuz (2014)
 Baltic rail terminal (Gatchina).jpg|Gatčin-Passažirskai-Baltijskai-päraudtestancii
 Гатчина Варш. Вокзал.jpg|Gatčin-Varšavskai-päraudtestancii
-ТРК Пилот .webp|«Pilot»-torguimižbobuštuzkeskuz (2021)
+ТРК Пилот (Гатчина).jpg|«Pilot»-torguimižbobuštuzkeskuz (2021)
 </gallery>
 
 == Homaičendad ==
