--- a/Jalutorovsk.mw
+++ b/Jalutorovsk.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Jalutorovsk<br />Ялуторовск
- | Lidnanznam = Yalutorovsk COA (Tobolsk Governorate) (1785).png
+ | Lidnanznam = Yalutorovsk COA (2010).gif
  | Flag = Flag of Yalutorovsk (Tyumen oblast) (2003).png
  | Lidnanznam text = Jalutorovskan lidnanznam
  | Flag text = Jalutorovskan flag
@@ -8,7 +8,7 @@
  | Eläjiden lugu = 39,837
  | Voz' = 2017
  | Pind = 51.91
- | Fail = Особняк Мясниковой (Ялуторовск)-2.JPG
+ | Fail = Особняк Мясниковой (Ялуторовск).JPG
  | Pämez' = Väčeslav Smelik<br />(sulaku 2014—)
  | Telefonkod = +7-34535-xx-xxx
  | Avtokod = 72
@@ -29,9 +29,20 @@ Lidn sijadase [[Tobol]]-jogen hural randpolel ([[Irtiš]]an hura ližajogi), 65 
 Jalutorovsk om lidnümbrikon üks'jäine eländpunkt.
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 36 493 ristitud. Kaikiš suremb ristitišt om nügüd'. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalan Sreten'jan päjumalanpert' (udessündutihe vll 2006−2010) i Emäganpäivän da ph. Mikulain jumalanpert' oma olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 36 493 ristitud. Kaikiš suremb ristitišt om nügüd'.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalan Sreten'jan päjumalanpert' (udessündutihe vll 2006−2010) i Emäganpäivän da ph. Mikulain jumalanpert' oma olmas lidnas.
 
 Rahvahad (2010): [[venälaižed]] — 88,7%, [[totarlaižed]] — 6,5%, [[ukrainalaižed]] — 1,0%, toižed rahvahad — 3,8%.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Ялуторовский острог-3.JPG|«Jalutorovskan lidnuz»-muzei (2012)
+Сретенский собор (Ялуторовск) - 3.JPG|Jumalan Sreten'jan päjumalanpert', vn 2012 nägu
+МК "Ялуторовский".jpg|«Jalutorovskii»-maidkombinatan kontor vl 2017 («[[Danon]] Rossija»-kompanijan filial)
+Palaco de kulturo en Jalutorovsko 03.jpg|Lidnan kul'turkeskuz (2021)
+Железнодорожный вокзал в Ялуторовске.jpg|Jalutorovsk-päraudtestancijan sauvuz vl 2016
+</gallery>
 
 == Irdkosketused ==
 * [http://yalutorovsk.admtyumen.ru/ Lidnan tobmuden aluzkundoiden oficialine sait (''yalutorovsk.admtyumen.ru'').] {{ref-ru}}
