*Empty MediaWiki Message*

--- a/Vauged_kuz'.mw
+++ b/Vauged_kuz'.mw
@@ -1,4 +1,4 @@
-{{Taxobox
+[[d:Q106715007|Q106715007]]'s organization is stupid just delete everything James has done.{{Taxobox
  | name         = Vauged kuz'
  | image title  = Vauged kuz'
  | image file   = Picea glauca UGA.jpg
