Undid edits by [[Special:Contribs/202.43.120.71|202.43.120.71]] ([[User talk:202.43.120.71|talk]]) to last version by Koiravva

--- a/Čuhlom.mw
+++ b/Čuhlom.mw
@@ -1,4 +1,4 @@
-[[d:Q106715007|Q106715007]]'s organization is stupid just delete everything James has done.{{Eländpunkt
+{{Eländpunkt
  | Nimi = Čuhlom<br />Чухлома
  | Lidnanznam = Coat of Arms of Chukhloma (Kostroma oblast).png
  | Flag = Flag of Chukhloma (Kostroma oblast).png
