Kävutajan [[Special:Contributions/5.150.19.150|5.150.19.150]] ([[User talk:5.150.19.150|Lodud]]) tožetused oma endištadud edeližhe versijahasai (avtor: [[User:Minorax|Minorax]])

--- a/Vepsän_flag.mw
+++ b/Vepsän_flag.mw
@@ -1,4 +1,4 @@
-[[d:Q106715007|Q106715007]]'s organization is stupid just delete everything James has done.[[Fail:Flag of Vepsia.svg|border|right|250px]]
+[[Fail:Flag of Vepsia.svg|border|right|250px]]
 '''[[Vepsän rahvahaline volost'|Vepsän rahvahaližen volostin]] flag''' ([[venäkel'|ven.]]: ''Флаг Вепсской национальной волости'') vai '''Vepsän flag''' ([[venäkel'|ven.]]: ''Флаг вепсов'') lugedas [[vepsläižed|vepsläižiden]] rahvahaližeks flagaks. Flagan proporcii om ''2:3''. Avtor om V. Dobrinin.
  
 Nece flag om vahvištadud [[2000]]-nden voden uhokul kut [[Vepsän rahvahaline volost'|Vepsän rahvahaližen volostin]] flag.
